Add SVEC-11.02-3, CET-11.02-3.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Functions of Several Variables
-      ###### Level Curves
+      ##### Partial Derivatives
+      ###### Partial Differential Equations
       Define .
     Back: |
       XXX
@@ -39,8 +39,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Functions of Several Variables
-      ###### Level Curves
+      ##### Partial Derivatives
+      ###### Partial Differential Equations
       State the . List its hypotheses.
     Back: |
       Hypotheses:
