--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Tangent Planes and Linear Approximations
-      ###### Functions of Three or More Variables
+      ##### The Chain Rule
       Define . List its hypotheses.
     Back: |
       Hypotheses:
@@ -41,8 +40,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Tangent Planes and Linear Approximations
-      ###### Functions of Three or More Variables
+      ##### The Chain Rule
       State the . List its hypotheses.
     Back: |
       Hypotheses:
