Add SVEC-11.07 and CET-14.07.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Directional Derivatives and the Gradient Vector
-      ###### Tangent Planes to Level Surfaces
+      ###### Absolute Maximum and Minimum Values
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +42,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Partial Derivatives
-      ##### Directional Derivatives and the Gradient Vector
-      ###### Tangent Planes to Level Surfaces
+      ###### Absolute Maximum and Minimum Values
       State the . List its hypotheses.
     Back: |
       X
